--- a/src/assets/scss/_layouts.scss
+++ b/src/assets/scss/_layouts.scss
@@ -17,9 +17,9 @@ header {
 footer {
     font-size: 0.875rem;
     position: absolute;
-    bottom: 0;
+    bottom: -5rem;
+    height: 70px;
     width: 92%;
-    margin: 2rem  auto 0 auto;
 
     hr {
         opacity: 0.1;
