--- a/src/assets/scss/_profiles.scss
+++ b/src/assets/scss/_profiles.scss
@@ -1,4 +1,5 @@
 .profile-account {
+    margin-bottom: 10rem;
     h5 {
         font-size: 0.75rem;
         text-transform: uppercase;
